# ucsc-hn

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  README.md
.github/workflows/: ucsc_ci.yml
.github/workspace/: ucsc_ci.yml
firmware/: releases.yaml
firmware/common/: ruckus.tcl
firmware/common/rtl/: Deserializer.vhd  FanInBoard.vhd  FanInRegs.vhd  FrameDetect.vhd  SapetPacketPkg.vhd  Serializer.vhd
firmware/python/ucsc_hn/: DacqSel.py  GuiTop.py  (+22 more)
software/config/: config_top.yml  config_top65.yml
software/include/: RenaDataDecoder.h  RenaDataWriter.h
software/lib/: CMakeLists.txt
software/lib/app_src/: rena_data_convert.cpp
software/lib/include/: RenaDataDecoder.h  RenaDataEmulator.h  RenaDataFormat.h  RenaDataWriter.h  RenaLegacyWriter.h
software/lib/src/: CMakeLists.txt  RenaDataDecoder.cpp  RenaDataEmulator.cpp  RenaDataFormat.cpp  RenaDataWriter.cpp  RenaLegacyWriter.cpp  ucsc_hn_lib.cpp
software/scripts/: config_anode.yml  config_cathode.yml  config_cathode65.yml  config_read.py  config_top.yml  convert_data.py  cts_analyze.py  defaults.xml  defaults.yml  defaults_iboard_cathode.yml  defaults_original.yml  defaults_scan.yml  defaults_test_20.yml  dump_stats.py  example_client.py  example_client_Harrison.py  gui.py  interactive_client.py  plot_channels.py  rateTestGui  renaArrayEmulator.py  renaDataConvert  renaDevGui  renaDevGui.py  renaEmulate  renaGui  renaGui.py  repeat10times.py  rth_cts_analyze.py  take_data.py  thold_scan.py  update_uboot.py
software/src/: RenaDataDecoder.cpp  RenaDataWriter.cpp
software/zynq/: ZynqServer.py
(+25 files in other folders)
